--- a/views/contactme.hbs
+++ b/views/contactme.hbs
@@ -12,11 +12,10 @@
                 <div class='about-datalist'>
                   <h5><i class='fa fa-dote'></i>Gujarat,India</h5>
                   <ul>
-                    <li><i class='fa fa-mobile'></i>+91 98524 45854</li>
-                    <li><i class='fa fa-envelope'></i>support@me.com</li>
+                    <li><i class='fa fa-mobile'></i>+918980538584</li>
+                    <li><i class='fa fa-envelope'></i>pramodv997.com</li>
                     <li>
-                      <i class='fa fa-map-marker'></i><span>s/101 king street
-                        varachha garvi
+                      <i class='fa fa-map-marker'></i><span>Varachha, surat
                         <br />
                         gujarat india</span>
                     </li>
@@ -27,11 +26,11 @@
                 <div class='about-datalist'>
                   <h5>Waterloo, Canada</h5>
                   <ul>
-                    <li><i class='fa fa-mobile'></i>+201 98525 4585</li>
-                    <li><i class='fa fa-envelope'></i>support@me.com</li>
+                    <li><i class='fa fa-mobile'></i>+1 519-259-9710</li>
+                    <li><i class='fa fa-envelope'></i>pramodv997@gmail.com</li>
                     <li>
-                      <i class='fa fa-map-marker'></i><span>s/101 king street
-                        varachha garvi
+                      <i class='fa fa-map-marker'></i><span>91-121 University
+                        Ave. East, Waterloo, N2J 4J1
                         <br />
                         gujarat india</span>
                     </li>
