--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,12 +5,18 @@
       <div class='row'>
         <div class='col-md-6'>
           <div class='home-section-textctr'>
-          
+
             <p class='home-txt1'>Hello, I'am Pramod</p>
-            <p class='home-txt2' id="sentdata">Full Stack <br /><strong>Developer</strong></p>
+            <p class='home-txt2' id='sentdata'>Full Stack
+              <br /><strong>Developer</strong></p>
             <p class='home-txt3'>Android Application And <br />Web Developer</p>
-            <form action='/contact' name="submit" method='POST'>
-              <button class='home-btn-hire' id="hirebtn" name="submit" type="submit">Hire Me</button>
+            <form action='/contact' name='submit' method='POST'>
+              <button
+                class='home-btn-hire'
+                id='hirebtn'
+                name='submit'
+                type='submit'
+              >Hire Me</button>
             </form>
 
           </div>
@@ -37,7 +43,7 @@
       <div class='heading-horizontal'>
         <h5>Get To Know</h5>
         <h2>About Me</h2>
-          <div class="border-horizontal">&nbsp;</div>
+        <div class='border-horizontal'>&nbsp;</div>
       </div>
       <div class='row'>
         <div class='col-md-12'>
@@ -68,7 +74,7 @@
       <div class='heading-horizontal text-center'>
         <h5>what I do</h5>
         <h2>My Services</h2>
-           <div class="border-horizontal">&nbsp;</div>
+        <div class='border-horizontal'>&nbsp;</div>
       </div>
       <div class='service-content'>
         <div class='row'>
@@ -128,7 +134,7 @@
     <div class='heading-horizontal text-center'>
       <h5>FIND MY WORK</h5>
       <h2>My WORK</h2>
-         <div class="border-horizontal">&nbsp;</div>
+      <div class='border-horizontal'>&nbsp;</div>
     </div>
     <div class='row'>
       {{#each data.mportfolioData}}
@@ -156,7 +162,7 @@
       <div class='heading-horizontal text-center'>
         <h5>Who i am</h5>
         <h2>Get In Touch</h2>
-           <div class="border-horizontal">&nbsp;</div>  
+        <div class='border-horizontal'>&nbsp;</div>
       </div>
       <div class='row'>
         <div class='col-md-6 col-sm-12'>
