--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
         <div class='col-md-6'>
           <div class='home-imgctr' class='text-center'>
             <img
-              src='/Photos/avtarimg.png'
+              src='/Photos/avtarround.png'
               alt='Pramod Vaghasia Profile Photo'
               id='home-myavtar'
               class='img-fluid'
