--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,6 +30,16 @@
               class='img-fluid'
             />
           </div>
+
+          <div class='home-btn-download text-center'>
+            <a
+            
+              href='/files/Pramod Vaghasia Resume.pdf'
+              download='newfilename'
+            >Resume </a>
+
+            <i class='fa fa-download'></i>
+          </div>
         </div>
       </div>
     </div>
