--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -161,7 +161,7 @@ ul.navbar-nav > li {
 
 #home-myavtar {
   border-radius: 50%;
-  box-shadow: 2px 2px 30px 18px rgba(255, 155, 5, 0.21);
+  box-shadow: 2px 2px 30px 18px rgba(255, 155, 5, 0.137);
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -170,7 +170,6 @@ ul.navbar-nav > li {
 
 #home-myavtar {
   height: 320px;
-  
   position: relative;
   top: 25%;
   left: 50%;
@@ -195,6 +194,29 @@ ul.navbar-nav > li {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+}
+
+
+.home-btn-download{
+  width: 200px;
+  background-color: #ffb633;
+  color: white;
+  position: relative;
+  left: 50%;
+  font-size: 17px;
+  padding: 15px;
+  font-weight: 700;
+  border: 2px solid #ffb633;
+  border-radius: 5px;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.home-btn-download a{
+  color: white;
+  text-decoration: none;
 }
 
 /* hire me button */
