--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,10 +33,9 @@
 
           <div class='home-btn-download text-center'>
             <a
-            
               href='/files/Pramod Vaghasia Resume.pdf'
-              download='newfilename'
-            >Resume </a>
+              download='Pramod_Vaghasia_Resume'
+            >Resume</a>
 
             <i class='fa fa-download'></i>
           </div>
