--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,7 +31,7 @@
             />
           </div>
 
-          <div class='home-btn-download text-center' hidden>
+          <div class='home-btn-download text-center'>
             <a
               href='/public/files/Pramod Vaghasia Resume.pdf'
               download='Pramod_Vaghasia_Resume'
