--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,7 +33,7 @@
 
           <div class='home-btn-download text-center'>
             <a
-              href='/public/files/Pramod Vaghasia Resume.pdf'
+              href='/files/Pramod Vaghasia Resume.pdf'
               download='Pramod_Vaghasia_Resume'
             >Resume</a>
 
